import asyncio
import socket
import sys
import os
from pathlib import Path
from typing import Optional
from loguru import logger

import sys
sys.path.insert(0, str(Path(__file__).parent.parent.parent))

from src.common.config import ConfigManager
from src.common.consul import ConsulClient
from src.common.modem_manager import ModemManager
from src.sms.sender import SMSSender
from src.sms.server import create_server


class SMSMicroservice:
    def __init__(self, config_path: Path):
        self.config_path = config_path
        self.config: Optional[ConfigManager] = None
        self.consul_client: Optional[ConsulClient] = None
        self.modem_manager: Optional[ModemManager] = None
        self.sender: Optional[SMSSender] = None
        self.grpc_server = None
        self._shutting_down = False
        self._tasks = []

    async def start(self) -> bool:
        try:
            logger.info("ğŸš€ å¯åŠ¨ SMS å¾®æœåŠ¡...")

            self.config = ConfigManager()
            if not await self.config.load(self.config_path):
                logger.error("âŒ é…ç½®åŠ è½½å¤±è´¥")
                return False

            cfg = self.config.get()

            await self._setup_logging(cfg.log)

            await self._print_config(cfg)

            logger.info("ğŸ“¡ åˆå§‹åŒ–è°ƒåˆ¶è§£è°ƒå™¨ç®¡ç†å™¨...")
            self.modem_manager = ModemManager(cfg)

            if not await self.modem_manager.initialize():
                logger.error("âŒ è°ƒåˆ¶è§£è°ƒå™¨ç®¡ç†å™¨åˆå§‹åŒ–å¤±è´¥")
                return False

            self.sender = SMSSender(self.modem_manager)

            host, port_str = cfg.server.listen_on.split(":")
            port = int(port_str)

            if host in ["0.0.0.0", "127.0.0.1", "[::]", "[::1]"]:
                host = socket.gethostbyname(socket.gethostname())

            if cfg.consul.host and cfg.consul.host != "localhost:8500":
                logger.info(f"ğŸ”— è¿æ¥åˆ° Consul: {cfg.consul.host}")

                modem_status = await self.modem_manager.get_status()

                server_data = {
                    "fields": {
                        "phone_number": {
                            "type": "str",
                            "description": "æ‰‹æœºå·ç ï¼ˆå›½é™…æ ¼å¼ï¼Œå¦‚+8613800138000ï¼‰",
                            "required": True,
                            "pattern": "^\\+[1-9]\\d{1,14}$"  # E.164æ ¼å¼
                        },
                        "content": {
                            "type": "str",
                            "description": "çŸ­ä¿¡å†…å®¹",
                            "required": True,
                        },
                        "sender_id": {
                            "type": "str",
                            "description": "å‘é€è€…IDï¼ˆå¯é€‰ï¼‰",
                            "required": False
                        },
                        "delivery_report": {
                            "type": "bool",
                            "description": "æ˜¯å¦è¦æ±‚é€è¾¾æŠ¥å‘Š",
                            "required": False,
                            "default": False
                        },
                        "metadata": {
                            "type": "dict",
                            "description": "å…ƒæ•°æ®",
                            "required": False
                        }
                    }
                }

                meta = {
                    "version": "1.0.0",
                    "available_modems": str(modem_status["available_modems"]),
                    "total_modems": str(modem_status["total_modems"]),
                    "host": socket.gethostname(),
                    "pid": str(os.getpid())
                }

                for i, modem in enumerate(modem_status["modems"][:3]):
                    meta[f"modem_{i+1}_port"] = modem["port"]
                    meta[f"modem_{i+1}_model"] = modem["model"]
                    meta[f"modem_{i+1}_signal"] = str(modem["signal_strength"])

                self.consul_client = ConsulClient(
                    host=cfg.consul.host,
                    token=cfg.consul.token,
                    scheme=cfg.consul.scheme
                )

                if await self.consul_client.register_service(
                    service_name=cfg.server.name,
                    address=host,
                    port=port,
                    service_desc="åŸºäº gsmmodem çš„ SMS çŸ­ä¿¡å¾®æœåŠ¡",
                    server_data=server_data,
                    meta=meta
                ):
                    logger.info("âœ… Consul æ³¨å†ŒæˆåŠŸ")
                else:
                    logger.warning("âš ï¸ Consul æ³¨å†Œå¤±è´¥ï¼ŒæœåŠ¡ç»§ç»­è¿è¡Œ")

            logger.info("ğŸŒ åˆ›å»º gRPC æœåŠ¡å™¨...")
            self.grpc_server = create_server(
                modem_manager=self.modem_manager,
                sender=self.sender,
                max_workers=cfg.server.max_workers
            )

            self.grpc_server.add_insecure_port(cfg.server.listen_on)
            await self.grpc_server.start()

            logger.info(f"âœ… gRPC æœåŠ¡å™¨å¯åŠ¨åœ¨ {cfg.server.listen_on}")
            logger.info(f"ğŸ“± æœåŠ¡åç§°: {cfg.server.name}")
            logger.info(f"ğŸ“¡ å¯ç”¨è°ƒåˆ¶è§£è°ƒå™¨: {modem_status['available_modems']}/{modem_status['total_modems']}")

            for modem in modem_status["modems"]:
                status = "âœ… å¯ç”¨" if modem["is_available"] else "âŒ ä¸å¯ç”¨"
                in_use = " (ä½¿ç”¨ä¸­)" if modem["in_use"] else ""
                logger.info(f"   {modem['port']}: {modem['manufacturer']} {modem['model']} - ä¿¡å·: {modem['signal_strength']} {status}{in_use}")

            self._tasks.append(
                asyncio.create_task(self._health_check_task())
            )

            logger.info("ğŸ‰ SMS å¾®æœåŠ¡å¯åŠ¨å®Œæˆï¼")
            return True

        except Exception as e:
            logger.error(f"âŒ æœåŠ¡å¯åŠ¨å¤±è´¥: {e}")
            import traceback
            logger.error(f"è¯¦ç»†é”™è¯¯: {traceback.format_exc()}")
            return False

    async def _health_check_task(self):
        try:
            while not self._shutting_down:
                await asyncio.sleep(30)

                if self.modem_manager:
                    healthy = await self.modem_manager.health_check()
                    if not healthy:
                        logger.warning("âš ï¸ å¥åº·æ£€æŸ¥: éƒ¨åˆ†è°ƒåˆ¶è§£è°ƒå™¨è¿æ¥å¤±è´¥")

                    status = await self.modem_manager.get_status()
                    logger.debug(f"ğŸ“Š è°ƒåˆ¶è§£è°ƒå™¨çŠ¶æ€: {status['available_modems']}/{status['total_modems']} å¯ç”¨")

        except asyncio.CancelledError:
            logger.debug("å¥åº·æ£€æŸ¥ä»»åŠ¡è¢«å–æ¶ˆ")
        except Exception as e:
            logger.error(f"å¥åº·æ£€æŸ¥ä»»åŠ¡å¼‚å¸¸: {e}")

    async def run(self):
        try:
            await self.grpc_server.wait_for_termination()

        except asyncio.CancelledError:
            logger.info("æœåŠ¡ä»»åŠ¡è¢«å–æ¶ˆ")
        except Exception as e:
            logger.error(f"gRPC æœåŠ¡å™¨å¼‚å¸¸: {e}")

    async def stop(self):
        if self._shutting_down:
            return

        self._shutting_down = True
        logger.info("ğŸ›‘ åœæ­¢ SMS å¾®æœåŠ¡...")

        for task in self._tasks:
            task.cancel()

        if self._tasks:
            await asyncio.gather(*self._tasks, return_exceptions=True)

        if self.consul_client:
            try:
                await self.consul_client.deregister_service()
                logger.info("âœ… Consul æœåŠ¡å·²æ³¨é”€")
            except Exception as e:
                logger.error(f"âŒ Consul æ³¨é”€å¤±è´¥: {e}")

        if self.grpc_server:
            try:
                await self.grpc_server.stop(grace=5.0)
                logger.info("âœ… gRPC æœåŠ¡å™¨å·²åœæ­¢")
            except Exception as e:
                logger.error(f"âŒ åœæ­¢ gRPC æœåŠ¡å™¨å¤±è´¥: {e}")

        if self.modem_manager:
            try:
                await self.modem_manager.cleanup()
                logger.info("âœ… è°ƒåˆ¶è§£è°ƒå™¨ç®¡ç†å™¨å·²æ¸…ç†")
            except Exception as e:
                logger.error(f"âŒ æ¸…ç†è°ƒåˆ¶è§£è°ƒå™¨ç®¡ç†å™¨å¤±è´¥: {e}")

        logger.info("ğŸ‘‹ SMS å¾®æœåŠ¡å·²åœæ­¢")

    async def _setup_logging(self, log_config):
        import sys

        logger.remove()

        if log_config.mode in ["console", "both"]:
            logger.add(
                sys.stdout,
                format="<green>{time:YYYY-MM-DD HH:mm:ss}</green> | "
                       "<level>{level: <8}</level> | "
                       "<cyan>{name}</cyan>:<cyan>{function}</cyan>:<cyan>{line}</cyan> - "
                       "<level>{message}</level>",
                level=log_config.level.upper(),
                colorize=True
            )

        if log_config.mode in ["file", "both"] and log_config.file_path:
            log_file = Path(log_config.file_path)
            log_file.parent.mkdir(parents=True, exist_ok=True)

            logger.add(
                str(log_file),
                format="{time:YYYY-MM-DD HH:mm:ss} | {level: <8} | "
                       "{name}:{function}:{line} - {message}",
                level=log_config.level.upper(),
                rotation="1 day",
                retention="7 days",
                encoding=log_config.encoding
            )

    async def _print_config(self, cfg):
        logger.info("=" * 50)
        logger.info("ğŸ“‹ æœåŠ¡é…ç½®:")
        logger.info(f"   æœåŠ¡åç§°: {cfg.server.name}")
        logger.info(f"   ç›‘å¬åœ°å€: {cfg.server.listen_on}")
        logger.info(f"   è¿è¡Œæ¨¡å¼: {cfg.server.mode}")
        logger.info(f"   æœ€å¤§å·¥ä½œçº¿ç¨‹: {cfg.server.max_workers}")

        if cfg.consul.host:
            logger.info(f"   Consul åœ°å€: {cfg.consul.host}")

        logger.info(f"   è°ƒåˆ¶è§£è°ƒå™¨æ³¢ç‰¹ç‡: {cfg.modem.baudrate}")
        logger.info(f"   è°ƒåˆ¶è§£è°ƒå™¨ PIN: {cfg.modem.pin or 'æ— '}")
        logger.info(f"   æ—¥å¿—çº§åˆ«: {cfg.log.level}")
        logger.info("=" * 50)
